[package]
name = "ingest-service"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
tracing = "0.1.44"
tungstenite = "0.29.0"
database = { path = "../../packages/database" }
chrono = "0.4.44"
